# assistent-inter-app

./: .gitignore  README.md  app.py  dashboard.py  dashboard.ui  data.py  dth.py  dth.ui  dth_ui.py  fibrahogar.py  fibrahogar.ui  fibrahogar_ui.py  hfc.py  hfc_ui.py  images.py  images.qrc  images_rc.py  internet_hfc.py  main.py  main.ui  main.ui.bak  main_2.ui  main_2_ui.py  main_ui.py  pyproject.toml  rc_images.py  setup.bat  setup.py  splash.ui  splash_ui.py  templates_ui.py
__build/exe.win-amd64-3.7/modules/Data/: data.json  templates.py
__build/exe.win-amd64-3.7/modules/Databases/: 001.sql  database.db
__build/exe.win-amd64-3.7/modules/Dth/: dth.py  dth_ui.py
__build/exe.win-amd64-3.7/modules/Fibrahogar/: fibrahogar.py
__build/exe.win-amd64-3.7/modules/Hfc/: hfc.py  hfc_tv.py  hfc_tv.ui  hfc_ui.py  prices_ui.py
__build/exe.win-amd64-3.7/modules/Main/: main.py
modules/Dashboard/: dashboard.py  dashboard.ui  dashboard_ui.py
modules/Data/: data.json  data.py  messages.json  prices.json  templates.json  templates.py  text.json
modules/Databases/: database.db  database.db-journal  database.py  modeldb.py
modules/Dth/: dth.py  dth.ui  dth_ui.py
modules/Fibrahogar/: fibrahogar.py  fibrahogar.ui  fibrahogar_ui.py
modules/Hfc/: hfc.py  hfc.ui  hfc_tv.py  hfc_tv.ui  hfc_tv_ui.py  hfc_ui.py  internet_hfc.py  prices_ui.py
modules/Main/: main.py  main.ui  main_ui.py
modules/Settings/: prices.py  prices.ui  prices_ui.py  settings.py  settings.ui  settings_ui.py  templates.py  templates.ui  templates_ui.py
(+10 files in other folders)
