# Specify the build system requirements.
[build-system]
requires = ["sip >=5.3, <7", "PyQt-builder >=1.6, <2"]
build-backend = "sipbuild.api"

# Specify the PEP 566 metadata for the project.
[tool.sip.metadata]
name = "Assistent Inter App"
version = "1.0.2"
summary = "Assistent Inter App"
home-page = "https://www.disproweb.net"
author = "Mario A. Fernández Liendo"
author-email = "alespcs@gmail.com"
license = "GPL v3"
requires-dist = "PyQt5 (>=5.15)"
description-file = "README"

# Specify a PyQt-based project.
[tool.sip]
project-factory = "pyqtbuild:PyQtProject"

# Configure the project.
[tool.sip.project]
tag-prefix = "AssistentInterApp"

# Define and configure each set of bindings.
[tool.sip.bindings.AssistentInterApp]
qmake-QT = ["charts"]
